Fixed webm info buttons z-index

--- a/src/components/Webm/Webm.css
+++ b/src/components/Webm/Webm.css
@@ -13,7 +13,9 @@
 
 .webmInfoWrapper {
   display: flex;
+  position: relative;
   margin-top: 1em;
+  z-index: 0;
 }
 
 .webmInfoWrapperPopup {
